--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,5 @@
 process {
-    publishDir = {"./results_disconects_flow/$sid/$task.process"}
+    publishDir = {"./results_disconets_flow/$sid/$task.process"}
     scratch = true
     errorStrategy = { task.attempt <= 1 ? 'retry' : 'ignore' }
     maxRetries = 3
@@ -41,7 +41,7 @@ params {
       outlier_threshold=0.5
 
   //**Output directory**//
-      output_dir="./results_disconects_flow"
+      output_dir="./results_disconets_flow"
 
   //**Number of processes per tasks**//
       processes_register=4
@@ -51,7 +51,7 @@ params {
       processes_bet_register_t1=4
       processes_apply_registration=4
 
-  Readme_Publish_Dir = "./results_disconects_flow/Readme"
+  Readme_Publish_Dir = "./results_disconets_flow/Readme"
 }
 
 if(params.linear_registration)
