answer max and charles comments

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,16 +14,15 @@ params {
   root = false
   tractograms = false
   atlases = false
-  in_tractograms = false
   help = false
 
   lesion_name="cavity"
 
   //**Registration**//
     run_bet=false
-    registration_script="antsRegistrationSyNQuick.sh"
+    registration_script="antsRegistrationSyN.sh"
     registration_strategy="s"
-    slow_registration=false
+    quick_registration=false
     linear_registration = false
 
   //**Template T1 path**//
@@ -51,6 +50,9 @@ params {
       processes_bet_register_t1=4
       processes_apply_registration=4
 
+  //**Process control**//
+      processes = false
+
   Readme_Publish_Dir = "./results_disconets_flow/Readme"
 }
 
@@ -59,9 +61,22 @@ if(params.linear_registration)
   params.registration_strategy="a"
 }
 
-if(params.slow_registration)
+if(params.quick_registration)
 {
-  params.registration_script="antsRegistrationSyN.sh"
+  params.registration_script="antsRegistrationSyNQuick.sh"
+}
+
+if(params.processes) {
+    if(params.processes > Runtime.runtime.availableProcessors()) {
+        throw new RuntimeException("Number of processes higher than available CPUs.")
+    }
+    else if(params.processes < 1) {
+        throw new RuntimeException("When set, number of processes must be >= 1 " +
+                                   "and smaller or equal to the number of CPUs.")
+    }
+    else {
+        executor.$local.cpus = params.processes
+    }
 }
 
 singularity {
