fix typos and profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -43,12 +43,8 @@ params {
       output_dir="./results_disconets_flow"
 
   //**Number of processes per tasks**//
-      processes_register=4
       processes_connectivity=4
-      decompose_memory_limit='6.GB'
-      commit_memory_limit='6.GB'
       processes_bet_register_t1=4
-      processes_apply_registration=4
 
   //**Process control**//
       processes = false
@@ -81,4 +77,14 @@ if(params.processes) {
 
 singularity {
     autoMounts = true
+}
+
+profiles {
+    fully_reproducible {
+        params.processes_bet_register_t1=1
+    }
+
+    macos {
+            process.scratch="/tmp"
+    }
 }
