fix for scilpy 1.5.0

--- a/nextflow.config
+++ b/nextflow.config
@@ -44,6 +44,7 @@ params {
 
   //**Number of processes per tasks**//
       processes_connectivity=4
+      processes_decompose=4
       processes_bet_register_t1=4
 
   //**Process control**//
